# realtime-tracking

./: .gitignore  CMakeLists.txt  VideoFaceDetector.cpp  VideoFaceDetector.h  main.cpp
lib/MacOS/: libICE.6.dylib  libSM.6.dylib  libXext.6.dylib
